<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="lib_app">LIBRARY APP</string>
    <string name="build_big">BUILD IT BIGGER</string>
    <string name="xyz_read">XYZ READER</string>
    <string name="capstone_app">CAPSTONE:MY OWN APP</string>

</resources>
