<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffdfeaf1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/my_title" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#F48B13"
        android:layout_below="@+id/textView"
        android:text="@string/media_streamer"
        android:onClick="onClickbtn"
        android:tag="1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button1"
        android:background="#F48B13"
        android:layout_centerHorizontal="true"
        android:onClick="onClickbtn"
        android:tag="2"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:background="#F48B13"
        android:onClick="onClickbtn"
        android:tag="3"
        android:layout_centerHorizontal="true"
        android:text="@string/lib_app" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:background="#F48B13"
        android:onClick="onClickbtn"
        android:tag="4"
        android:layout_centerHorizontal="true"
        android:text="@string/build_big" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:background="#F48B13"
        android:onClick="onClickbtn"
        android:tag="5"
        android:layout_centerHorizontal="true"
        android:text="@string/xyz_read" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#f413da"
        android:onClick="onClickbtn"
        android:tag="6"
        android:layout_below="@+id/button5"
        android:text="@string/capstone_app"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
